--- a/web/man-extra.css
+++ b/web/man-extra.css
@@ -12,6 +12,22 @@ pre {
   overflow-x: auto;
 }
 
+pre::-webkit-scrollbar {
+  height: 5px;
+}
+
+pre::-webkit-scrollbar-track {
+    background: #EEEEEE;
+}
+
+pre::-webkit-scrollbar-thumb {
+  background: #9E9E9E;
+}
+
+pre::-webkit-scrollbar-thumb:hover {
+  background: #757575;
+}
+
 .mp > p, .mp > pre, .mp > ul, .mp > ol, .mp > dl {
   margin-left: 0;
 }
@@ -27,5 +43,17 @@ pre {
 
   #SEE-ALSO + p {
     text-align: initial;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  ol.man-decor li.tr {
+    padding-right: 0.5em;
+  }
+}
+
+@media only screen and (max-width: 430px) {
+  ol.man-decor li.tr {
+    padding-right: 1em;
   }
 }
